--- a/example/002/assets/style.css
+++ b/example/002/assets/style.css
@@ -1,1 +1,9 @@
-style file
+.msg {
+    color: blue;
+}
+.block {
+    background-color: red;
+    border-radius: 50px;
+    width: 300px;
+    height: 300px;
+}
